--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NepedIn - This is the practice clone of LinedIn</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 </body>
+
+<nav class="navbar">
+    <div class="nav-left">
+        <a href="index.html" class="logo"><img src="images/logo.png"></a>
+    </div>
+    <div class="navbar-center">
+        <ul>
+            <li><a href="#"><img src="images/home.png"><span>Home</span></a></li>
+            <li><a href="#"><img src="images/network.png"><span>My Network</span></a></li>
+            <li><a href="#"><img src="images/jobs.png"><span>Jobs</span></a></li>
+            <li><a href="#"><img src="images/message.png"><span>Messaging</span></a></li>
+            <li><a href="#"><img src="images/notification.png"><span>Notification</span></a></li>
+        </ul>
+    </div>
+    <div class="nav-right">
+        <img src="images/user-1.png" class="nav-profile-img">
+    </div>
+</nav>
 
 </html>
