--- a/index.html
+++ b/index.html
@@ -42,7 +42,25 @@
 
 <div class="conatainer">
     <!--------------- left-sidebar  ------------->
-    <div class="left-sidebar"></div>
+    <div class="left-sidebar">
+        <div class="sidebar-profile-box">
+            <img src="images/cover-pic.png" width="100%">
+            <div class="sidebar-profile-info">
+                <img src="images/user-1.png">
+                <h1>Rayan Walton</h1>
+                <h3>Web Developer at Microsoft</h3>
+                <ul>
+                    <li>Your Profile views <span>52</span></li>
+                    <li>Your Post views <span>810</span></li>
+                    <li>Your Connections views <span>205</span></li>
+                </ul>
+            </div>
+            <div class="sidebar-profile-link">
+                <a href="#"><img src="images/items.png"> My Items</a>
+                <a href="#"><img src="images/premium.png"> Try Premium</a>
+            </div>
+        </div>
+    </div>
     <!--------- main-content -------------->
     <div class="main-content"></div>
     <!---------- right-sidebar ------------->
