--- a/index.html
+++ b/index.html
@@ -60,6 +60,27 @@
                 <a href="#"><img src="images/premium.png"> Try Premium</a>
             </div>
         </div>
+        <div class="sidebar-activity">
+            <h3>RECENT</h3>
+            <a href="#"><img src="images/recent.png">Web Development</a>
+            <a href="#"><img src="images/recent.png">User Interface</a>
+            <a href="#"><img src="images/recent.png">Online Learning</a>
+            <a href="#"><img src="images/recent.png">Learn Online</a>
+            <a href="#"><img src="images/recent.png">Code Better</a>
+            <a href="#"><img src="images/recent.png">Group Learning</a>
+            <h3>GROUP</h3>
+            <a href="#"><img src="images/group.png">Web Desing Group</a>
+            <a href="#"><img src="images/group.png">HTML & CSS Learners</a>
+            <a href="#"><img src="images/group.png">Python & JavaScript Group</a>
+            <a href="#"><img src="images/group.png">Learn Coding Online</a>
+            <h3>HASHTAG</h3>
+            <a href="#"><img src="images/hashtag.png">webdevelopment</a>
+            <a href="#"><img src="images/hashtag.png">userinterface</a>
+            <a href="#"><img src="images/hashtag.png">onlinelearning</a>
+            <div class="discover-more-link">
+                <a href="#">Discover more</a>
+            </div>
+        </div>
     </div>
     <!--------- main-content -------------->
     <div class="main-content"></div>
