--- a/index.html
+++ b/index.html
@@ -85,7 +85,28 @@
     <!--------- main-content -------------->
     <div class="main-content"></div>
     <!---------- right-sidebar ------------->
-    <div class="right-sidebar"></div>
+    <div class="right-sidebar">
+        <div class="sidebar-news">
+            <img src="images/more.png" class="info-icon">
+            <h3>Trending News</h3>
+            <a href="#">High demand for skilled manpower</a>
+            <span>1d ago &middot; 10,934 readers</span>
+
+            <a href="#">Careers growing horizontally too</a>
+            <span>19hr ago &middot; 1,555 readers</span>
+
+            <a href="#">Less work visa for US, more for UK</a>
+            <span>1d ago &middot; 26,999 readers</span>
+
+            <a href="#">More hiring = higher confidence?</a>
+            <span>1d ago &middot; 45,937 readers</span>
+
+            <a href="#">Elon Musk is the world's richest person</a>
+            <span>1d ago &middot; 3,999 readers</span>
+
+            <a href="#" class="read-more-link">Read More</a>
+        </div>
+    </div>
 </div>
 
 </html>
