--- a/index.html
+++ b/index.html
@@ -83,7 +83,24 @@
         </div>
     </div>
     <!--------- main-content -------------->
-    <div class="main-content"></div>
+    <div class="main-content">
+        <div class="create-post">
+            <div class="create-post-input">
+                <img src="images/user-1.png">
+                <textarea rows="2" placeholder="Write a post....."></textarea>
+            </div>
+            <div class="create-post-links">
+                <li><img src="images/photo.png">Photo</li>
+                <li><img src="images/video.png">Video</li>
+                <li><img src="images/event.png">Event</li>
+                <li>Post</li>
+            </div>
+        </div>
+        <div class="sort-by">
+            <hr>
+            <p>Sort By: <span>top <img src="images/down-arrow.png"></span></p>
+        </div>
+    </div>
     <!---------- right-sidebar ------------->
     <div class="right-sidebar">
         <div class="sidebar-news">
