Index page completed

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </div>
         <div class="nav-right">
             <div class="online">
-                <img src="images/user-1.png" class="nav-profile-img">
+                <img src="images/user-1.png" class="nav-profile-img" onclick="toggleMenu()">
             </div>
         </div>
         <!---------------profile-drop-down-menu-------------------->
-        <div class="profile-menu-wrap" id="profile-Menu">
+        <div class="profile-menu-wrap" id="profileMenu">
             <div class="profile-menu">
                 <div class="user-info">
                     <img src="images/user-1.png">
@@ -381,6 +381,15 @@
             </div>
         </div>
     </div>
+
+    <script>
+        let profileMenu = document.getElementById("profileMenu");
+
+        function toggleMenu() {
+            profileMenu.classList.toggle("open-menu");
+        }
+    </script>
+
 </body>
 
 </html>
