Minor Issue Solved

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-------------- navbar close------------------->
 
-    <div class="conatainer">
+    <div class="container">
         <!--------------- left-sidebar  ------------->
         <div class="left-sidebar">
             <div class="sidebar-profile-box">
