--- a/profile.html.html
+++ b/profile.html.html
@@ -95,9 +95,19 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!--------------profile-sidebar------------------->>
+            <div class="profile-description">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, quis dicta dolorum, fugit
+                    delectus fugiat minus quod, adipisci cupiditate officia reiciendis provident impedit. Vero
+                    provident, sequi earum consequatur quasi ab! Lorem, ipsum dolor sit amet consectetur adipisicing
+                    elit. Suscipit eaque sequi maiores minima fugiat ipsam vel totam quas accusantium unde nobis fuga
+                    exercitationem, quae consequuntur tempora nesciunt recusandae dignissimos error.</p>
+                <a href="#" class="see-more-link">See more.......</a>
+            </div>
+
+        </div>
+        <!--------------profile-sidebar------------------->
         <div class="profile-sidebar"></div>
     </div>
 
