--- a/profile.html.html
+++ b/profile.html.html
@@ -105,19 +105,57 @@
                     exercitationem, quae consequuntur tempora nesciunt recusandae dignissimos error.</p>
                 <a href="#" class="see-more-link">See more.......</a>
             </div>
-
+            <div class="profile-description">
+                <h2>Experience</h2>
+                <div class="profile-desc-row">
+                    <img src="images/microsoft.png">
+                    <div>
+                        <h3>Lead Front - End Developer</h3>
+                        <b>Microsoft &middot; Full Time</b>
+                        <b>Feb 2021 - Present &middot; 2.5 years</b>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A commodi nulla, fugit et aliquam,
+                            enim quia similique reiciendis cupiditate obcaecati vero saepe voluptates est ullam
+                            architecto optio dolorum? Labore, non.</p>
+                        <hr>
+                    </div>
+                </div>
+                <div class="profile-desc-row">
+                    <img src="images/slack.png">
+                    <div>
+                        <h3>Full Stack Developer</h3>
+                        <b>Slack &middot; Full Time</b>
+                        <b>Jan 2018 - Jan 2021 &middot; 3 years</b>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A commodi nulla, fugit et aliquam,
+                            enim quia similique reiciendis cupiditate obcaecati vero saepe voluptates est ullam
+                            architecto optio dolorum? Labore, non.</p>
+                        <hr>
+                    </div>
+                </div>
+                <div class="profile-desc-row">
+                    <img src="images/google.png">
+                    <div>
+                        <h3>Web Developer</h3>
+                        <b>Google Inc &middot; Full Time</b>
+                        <b>Feb 2015 - May 2018 &middot; 3.5 years</b>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A commodi nulla, fugit et aliquam,
+                            enim quia similique reiciendis cupiditate obcaecati vero saepe voluptates est ullam
+                            architecto optio dolorum? Labore, non.</p>
+                    </div>
+                </div>
+                <hr>
+                <a href="#" class="experience-link">Show All Experience <img src="images/right-arrow.png"></a>
+            </div>
+            <!--------------profile-sidebar------------------->
+            <div class="profile-sidebar"></div>
         </div>
-        <!--------------profile-sidebar------------------->
-        <div class="profile-sidebar"></div>
-    </div>
 
-    <script>
-        let profileMenu = document.getElementById("profileMenu");
+        <script>
+            let profileMenu = document.getElementById("profileMenu");
 
-        function toggleMenu() {
-            profileMenu.classList.toggle("open-menu");
-        }
-    </script>
+            function toggleMenu() {
+                profileMenu.classList.toggle("open-menu");
+            }
+        </script>
 
 </body>
 
