--- a/profile.html.html
+++ b/profile.html.html
@@ -145,17 +145,65 @@
                 <hr>
                 <a href="#" class="experience-link">Show All Experience <img src="images/right-arrow.png"></a>
             </div>
-            <!--------------profile-sidebar------------------->
-            <div class="profile-sidebar"></div>
+            <div class="profile-description">
+                <h2>Education</h2>
+                <div class="profile-desc-row">
+                    <img src="images/stanford.png">
+                    <div>
+                        <h3>Stanford University</h3>
+                        <b>BSEE, Electrical Engineering</b>
+                        <b>2018 - 2022</b>
+                        <hr>
+                    </div>
+                </div>
+                <div class="profile-desc-row">
+                    <img src="images/north.png">
+                    <div>
+                        <h3>Northwestern University</h3>
+                        <b>Computer Science</b>
+                        <b>2015 - 2018</b>
+                        <hr>
+                    </div>
+                </div>
+                <div class="profile-desc-row">
+                    <img src="images/mit.png">
+                    <div>
+                        <h3>Harvard University</h3>
+                        <b>Senior High School</b>
+                        <b>2005 - 2015</b>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-description">
+                <h2>Skills</h2>
+                <a href="#" class="skills-btn">Leadership</a>
+                <a href="#" class="skills-btn">Web Design</a>
+                <a href="#" class="skills-btn">Development</a>
+                <a href="#" class="skills-btn">Communication</a>
+                <a href="#" class="skills-btn">UI/UX</a>
+                <a href="#" class="skills-btn">Planning</a>
+                <a href="#" class="skills-btn">Coding</a>
+                <a href="#" class="skills-btn">JavaScript</a>
+                <a href="#" class="skills-btn">Python</a>
+                <a href="#" class="skills-btn">Enterprenuorship</a>
+            </div>
+            <div class="profile-description">
+                <h2>Languages</h2>
+                <a href="#" class="language-btn">English</a>
+                <a href="#" class="language-btn">German</a>
+            </div>
         </div>
+        <!--------------profile-sidebar------------------->
+        <div class="profile-sidebar"></div>
+    </div>
 
-        <script>
-            let profileMenu = document.getElementById("profileMenu");
+    <script>
+        let profileMenu = document.getElementById("profileMenu");
 
-            function toggleMenu() {
-                profileMenu.classList.toggle("open-menu");
-            }
-        </script>
+        function toggleMenu() {
+            profileMenu.classList.toggle("open-menu");
+        }
+    </script>
 
 </body>
 
