--- a/profile.html
+++ b/profile.html
@@ -193,8 +193,22 @@
                 <a href="#" class="language-btn">German</a>
             </div>
         </div>
+
         <!--------------profile-sidebar------------------->
-        <div class="profile-sidebar"></div>
+        <div class="profile-sidebar">
+            <div class="sidebar-ad">
+                <small>Ad &middot; &middot; &middot;</small>
+                <p>Master the 5 principles of web design</p>
+                <div>
+                    <img src="images/user-1.png">
+                    <img src="images/mi-logo.png">
+                </div>
+                <b>Brand and Demand in Xiaomi</b>
+                <a href="#" class="ad-link">Learn More</a>
+            </div>
+
+
+        </div>
     </div>
 
     <script>
