--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <a href="#"><img src="images/premium.png"> Try Premium</a>
                 </div>
             </div>
-            <div class="sidebar-activity">
+            <div class="sidebar-activity" id="sidebarActivity">
                 <h3>RECENT</h3>
                 <a href="#"><img src="images/recent.png">Web Development</a>
                 <a href="#"><img src="images/recent.png">User Interface</a>
@@ -117,6 +117,7 @@
                     <a href="#">Discover more</a>
                 </div>
             </div>
+            <p id="showMoreLink" onclick="toggleActivity()">Show more <b>+</b></p>
         </div>
         <!--------- main-content -------------->
         <div class="main-content">
@@ -387,6 +388,21 @@
 
         function toggleMenu() {
             profileMenu.classList.toggle("open-menu");
+        }
+    </script>
+    <script>
+        let sideActivity = document.getElementById("sidebarActivity");
+        let moreLink = document.getElementById("showMoreLink");
+
+        function toggleActivity() {
+            sidebarActivity.classList.toggle("open-activity");
+
+            if (sideActivity.classList.contains("open-activity")) {
+                moreLink.innerHTML = "Show less <b>-</b>";
+            }
+            else {
+                moreLink.innerHTML = "Show more <b>+</b>";
+            }
         }
     </script>
 
